# course_project_django

./: .flake8  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mail_recipient/: apps.py  models.py  urls.py  views.py
mail_recipient/migrations/: 0001_initial.py
mail_recipient/templates/mail_recipient/: base.html  detail_recipient.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html  recipients_list.html
message/: forms.py  models.py  urls.py  views.py
message/migrations/: 0001_initial.py
message/templates/: main_page.html
message/templates/message/: base.html  confirm_delete_message.html  detail_message.html  header.html  message_form.html  message_list.html
newsletter/: forms.py  models.py  urls.py  views.py
newsletter/migrations/: 0001_initial.py  0002_alter_newsletter_end_time_alter_newsletter_message_and_more.py  0003_alter_newsletter_start_time_alter_newsletter_status.py  0004_alter_newsletter_start_time.py  0005_alter_newsletter_start_time.py
newsletter/templates/newsletter/: confirm_delete_newsletter.html  detail_newsletter.html  newsletter_form.html  newsletters_list.html  send_newsletter.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
user/templates/custom_registration/: password_reset.html  password_reset_complete.html  password_reset_done.html  password_reset_form.html
user/templates/user/: login.html  register.html  user_form.html
