[project]
name = "course-project-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "link (>=2.1.4,<3.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "icloud (>=0.1,<0.2)",
    "mypy (>=1.19.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
